--- a/css/challenge3.css
+++ b/css/challenge3.css
@@ -70,19 +70,19 @@ main {
 }
 
 .location .city {
-	color: #363636;
+	color: black;
 	font-size: 25px;
 	font-weight: 500;
 	margin-bottom: 5px;
 }
 
 .location .date {
-	color: #363636;
+	color: black;
 	font-size: 15px;
 }
 
 .current .temp {
-	color: #363636;
+	color: black;
 	font-size: 75px;
 	font-weight: 900;
 	margin: 5px 0px;
@@ -94,14 +94,14 @@ main {
 }
 
 .current .weather {
-color: #363636;
+color: black;
     font-size: 25px;
     font-weight: 500;
     margin-bottom: 5px;
 	}
 
 .current .hi-low {
-	color: #363636;
+	color: black;
 	font-size: 15px;
 }
 
